--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -1,6 +1,14 @@
 @import "../../assets/styles/global.css";
 
+html, body {
+  width: 750px;
+  max-height: 572px;
+  overflow: hidden;
+}
+
 #app {
-  max-width: 400px;
-  margin: 0 auto;
+  width: 100%;
+  max-height: 572px;
+  overflow-y: hidden;
+  margin: 0;
 }
